# FalconKata

./: .gitignore  Makefile.am  README.md  configure.ac
doc/: Makefile.am  intToRoman.man  libroman.man  romanToInt.man
src/: Makefile.am  roman.c  roman.h
tests/: Makefile.am  check_roman.c
